fix(panel): max z-index for dict panel
Closes #316

--- a/src/_sass_global/_z-indices.scss
+++ b/src/_sass_global/_z-indices.scss
@@ -11,7 +11,7 @@ $global-zindex-popover:           2147483646 !default;
 $global-zindex-tooltip:           2147483647 !default;
 
 
-$global-zindex-dicteditor:        2147483644;
-$global-zindex-dictpanel-dragbg:  2147483645;
-$global-zindex-dictpanel:         2147483646;
+$global-zindex-dicteditor:        2147483645;
+$global-zindex-dictpanel-dragbg:  2147483646;
+$global-zindex-dictpanel:         2147483647;
 $global-zindex-bowl:              2147483647;
